<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/main_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:src="@drawable/score"
            />
        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="50px"
            />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30px"
        android:src="@drawable/task4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:text="Add Task"
            app:backgroundTint="#4CAF50"
            android:background="@drawable/button_style"
            android:fontFamily="sans-serif-black"
            />

        <Button
            android:id="@+id/all_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Task"
            app:backgroundTint="#4CAF50"
            android:background="@drawable/button_style"
            android:fontFamily="sans-serif-black"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50px"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:fontFamily="@font/antonregular"
        />

    <TextView
        android:id="@+id/text_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50px"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:background="@drawable/text_view_style"
        />


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#87cefe" />
</LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reward_adv_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/videoad"
         />
    <View
        android:id="@+id/dummy"
        android:layout_width="1dp"
        android:layout_height="16dp"
        app:layout_anchor="@id/reward_adv_button"
        app:layout_anchorGravity="top|right|end" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/interstitial_adv_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_margin="16dp"
        app:layout_anchor="@id/dummy"
        android:src="@drawable/ads"
        app:layout_anchorGravity="top|right|end" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>