<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/setting_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Setting">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/username"
        android:layout_margin="50dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Username"
        android:fontFamily="sans-serif-black"
        android:textSize="50px"
        android:layout_marginLeft="20dp"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/profile"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:id="@+id/edit_username"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Team"
        android:fontFamily="sans-serif-black"
        android:textSize="50px"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/group"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="select team"
        >

        <AutoCompleteTextView
            android:id="@+id/auto_completed_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:drawablePadding="5dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        app:backgroundTint="#4CAF50"
        android:enabled="false"
        />



</LinearLayout>