<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_task_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.AddTask">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="Add Task"
        android:textColor="@color/black"
        android:textSize="80px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!--        <TextView-->
        <!--            android:id="@+id/textView2"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Task Title"-->
        <!--            android:textSize="50px"-->
        <!--            android:fontFamily="sans-serif-black"-->
        <!--            />-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Title"
            app:startIconDrawable="@drawable/taskicon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/textView3"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Task Description"-->
        <!--            android:textSize="50px"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:fontFamily="sans-serif-black"-->
        <!--            />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFields"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Description"
            app:startIconDrawable="@drawable/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/textView4"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Status"-->
        <!--            android:textSize="50px"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:fontFamily="sans-serif-black"-->
        <!--            />-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="select status"
            app:startIconDrawable="@drawable/state">

            <AutoCompleteTextView
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--        <TextView-->
        <!--            android:id="@+id/textView5"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Team"-->
        <!--            android:fontFamily="sans-serif-black"-->
        <!--            android:textSize="50px"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            />-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="select team"
            app:startIconDrawable="@drawable/group">

            <AutoCompleteTextView
                android:id="@+id/team_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@android:drawable/btn_dialog"
            android:text="Upload Image"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/submit_task"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:text="Submit"
            android:textSize="50px"
            app:backgroundTint="#4CAF50"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signikabold"
                android:text="Total Tasks : "
                android:textColor="@color/black"
                android:textSize="40px" />

            <TextView
                android:id="@+id/total_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 0"
                android:textColor="#d50000" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>