<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/all_task_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AllTask">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="All Task"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textSize="80px"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/checklist"
        android:layout_margin="10dp"/>

</LinearLayout>